--- a/src/app/modules/login/create-login/create-login.component.html
+++ b/src/app/modules/login/create-login/create-login.component.html
@@ -1,4 +1,3 @@
-<a a routerLink="/main" class="btn btn-info">Voltar</a>
 <div class="limiter">
   <div class="container-login100">
     <div class="wrap-login100 p-t-20 p-b-85">
@@ -7,6 +6,7 @@
         <span class="login100-form-title p-b-31"> Criar Conta </span>
 
         <!--Username-->
+        <a routerLink="/main" class="txt1">voltar</a>
         <div class="wrap-input100 validate-input m-b-12">
           <input type="text" class="input100" [(ngModel)]="user.username" 
           id="username" name="username" placeholder="Username">
