--- a/src/app/modules/restrict/add-expense/add-expense.component.html
+++ b/src/app/modules/restrict/add-expense/add-expense.component.html
@@ -18,7 +18,7 @@
 
           <div class="col-sm-6">
             <label for="itemName">Tipo da despesa:</label>
-            <select id="itemName" name="itemName" class="form-control ml-1" 
+            <select required id="itemName" name="itemName" class="form-control ml-1" 
             [(ngModel)]="expense.expenseType" (change)="getExpenseType()">
               <option *ngFor="let type of expenseType" [ngValue]="type">
                 {{type}}
@@ -30,11 +30,14 @@
         <br>
 
         <!-- dates -->
-        <div class="col-sm-6">
-          <label for="expenseDate" class="control-label">Data:</label>
-          <input required id="expenseDate" name="expenseDate" type="text" class="form-control" 
-          [(ngModel)]="datepickerRange" bsDaterangepicker [bsConfig]="bsConfig">
-        </div>
+        <div class="row">
+          <div class="col-sm-6">
+            <label for="expenseDate" class="control-label">Data:</label>
+            <input required id="expenseDate" name="expenseDate" type="text" class="form-control" 
+            [(ngModel)]="expense.expenseDate" bsDatepicker [bsConfig]="bsConfig">
+          </div>
+       </div>
+
       </div>
 
       <br>
@@ -50,7 +53,7 @@
            [class.has-success]="item.valid">
              <label for="itemName" class="control-label">Nome do item:</label>
              <input required id="itemName" name="itemName{{i}}" type="text" class="form-control" 
-             [(ngModel)]="obj.itemName" #item="ngModel">
+             [(ngModel)]="obj.item" #item="ngModel">
              <span class="help-block" *ngIf="item.invalid && item.touched">
                O nome do item é obrigatório
              </span>
@@ -67,7 +70,7 @@
             <!--currency-->
             <div class="col-sm-6">
               <label for="currency">Moeda:</label>
-              <select id="currency" name="currency{{i}}" class="form-control ml-1" 
+              <select required id="currency" name="currency{{i}}" class="form-control ml-1" 
               [(ngModel)]="obj.currency" (change)="getCurrency()">
                 <option *ngFor="let c of currency"[value]="c">
                   {{c}}
@@ -79,7 +82,7 @@
               [class.has-success]="val.valid">
               <label for="value" class="control-label">Valor:</label>
               <input required id="value" name="value{{i}}" type="text" class="form-control" 
-                [(ngModel)]="obj.value" #val="ngModel">
+                [(ngModel)]="obj.value" #val="ngModel"  (keyup)="sum(obj.value)">
               <span class="help-block" *ngIf="val.invalid && val.touched">
                 O valor do item é obrigatório
               </span>
@@ -112,6 +115,11 @@
             </div>
           </div>
           <hr>
+
+
+
+
+          
         </div>
       <!--end of item-->
       <br>
@@ -124,13 +132,9 @@
           <div class="col-sm-4">
             <label for="value">Valor total: </label>
             <input id="value" type="text" class="form-control" readonly
-            value="10.00" placeholder="{{10.00}}" >
+            placeholder="{{total}}" >
           </div>
         </div>
-
-
-        
-
 
 
 
