home page improved

--- a/src/app/modules/public/home/home.component.html
+++ b/src/app/modules/public/home/home.component.html
@@ -1,47 +1,42 @@
 <main id="main">
-<section id="why-us" class="why-us">
+  <section id="why-us" class="why-us">
     <div class="container">
-
       <div class="row">
-        <div class="col-xl-4 col-lg-5" data-aos="fade-up">
+
+        <div class="col-xl-4 col-lg-4">
           <div class="content">
             <h3>Porquê  escolher a solução ET-Costs?</h3>
             <p>
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-              Asperiores dolores sed et. Tenetur quia eos. Autem tempore quibusdam vel necessitatibus optio ad corporis.
+              ET-Costs, acrómimo para Expense Tracker Costs, é um software que lhe permite gerir as suas despesas 
+              e rendimentos. É uma solução simples que lhe mostra nume outra em várias perspetivas, de que forma 
+              está a gastar o seu dinheiro, comparações entre rendimentos e despesas de forma a que possa tomar 
+              decisões que ajudem o seu orçamento a crescer.
             </p>
-            <div class="text-center">
-              <a href="#" class="more-btn">Saber mais <i class="bx bx-chevron-right"></i></a>
-            </div>
           </div>
         </div>
-        <div class="col-xl-8 col-lg-7 d-flex">
-          <div class="icon-boxes d-flex flex-column justify-content-center">
-            <div class="row">
-              <div class="col-xl-4 d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="100">
-                <div class="icon-box mt-4 mt-xl-0">
-                  <i class="bx bx-receipt"></i>
-                  <h4>Corporis voluptates sit</h4>
-                  <p>Consequuntur sunt aut quasi enim aliquam quae harum pariatur laboris nisi ut aliquip</p>
+
+        <div class="col-xl-4 col-lg-8">
+          <div class="icon-boxes d-flex flex-column">
+
+              <div class="col-xl-4">
+                <div class="icon-box mt-4">
+                  <i class="fas fa-money-check-alt"><h4>Adicionar Despesa</h4></i>
+                  <p>Existem vários tipos de despesa para que possa separar em grupos</p>
                 </div>
               </div>
-              <div class="col-xl-4 d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="200">
-                <div class="icon-box mt-4 mt-xl-0">
-                  <i class="bx bx-cube-alt"></i>
-                  <h4>Ullamco laboris ladore pan</h4>
-                  <p>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt</p>
-                </div>
-              </div>
-              <div class="col-xl-4 d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="300">
-                <div class="icon-box mt-4 mt-xl-0">
-                  <i class="bx bx-images"></i>
-                  <h4>Labore consequatur</h4>
-                  <p>Aut suscipit aut cum nemo deleniti aut omnis. Doloribus ut maiores omnis facere</p>
+
+              <div class="col-xl-4">
+                <div class="icon-box mt-4">
+                  <i class="fas fa-funnel-dollar"><h4>Adicionar Receita</h4></i>
+                  <p>Para não ser exaustivo, os tipos de receitas são generalizados e apenas representam
+                    rendimentos no seu orçamento
+                  </p>
                 </div>
               </div>
             </div>
-          </div>
         </div>
+
+
       </div>
 
     </div>
