--- a/src/app/modules/public/public-main/public-main.component.html
+++ b/src/app/modules/public/public-main/public-main.component.html
@@ -43,10 +43,6 @@
     <div class="container" data-aos="fade-in">
       <h1>Esta é a ET-Costs</h1>
       <h2>Oferece-lhe uma solução simples para gerir as suas despesas</h2>
-      <div class="d-flex align-items-center">
-        <i class="fas fa-arrow-right get-started-icon"></i>
-        <a href="#about" class="btn-get-started scrollto">Saber mais</a>
-      </div>
     </div>
   </section>
   <!-- End Welcome -->
@@ -125,8 +121,11 @@
           </div>
 
           <div class="col-lg-4 col-md-6 footer-newsletter">
+            
             <h4>Subscreva a nossa Newsletter</h4>
+            <div class="footer-contact">
             <p>Irá receber todas as atualizações disponiveis, bem como novidades ET-Costs</p>
+          </div>
             <form action="" method="post">
               <input type="email" name="email"><input type="submit" value="Subscrever">
             </form>
@@ -140,10 +139,7 @@
 
       <div class="mr-lg-auto text-center text-lg-left">
         <div class="copyright">
-          &copy; Copyright <strong><span>Marsoft</span></strong>. All Rights Reserved
-        </div>
-        <div class="credits">
-          Designed by Joe Mars
+          &copy; Copyright <strong><span>Marsoft</span></strong>. All Rights Reserved. Designed by Joe Mars
         </div>
       </div>
       <div class="social-links text-center text-lg-right pt-3 pt-lg-0">
