--- a/src/app/modules/public/home/home.component.css
+++ b/src/app/modules/public/home/home.component.css
@@ -1,7 +1,3 @@
-/**
-* CSS - main
-*/
-
 /*--------------------------------------------------------------
 # General
 --------------------------------------------------------------*/
@@ -21,6 +17,12 @@ a:hover {
 
 h1, h2, h3, h4, h5, h6 {
   font-family: "Raleway", sans-serif;
+}
+
+p {
+  font-family: "Raleway", sans-serif;
+  text-align: justify;
+  font-size: 14px;
 }
 
 /*--------------------------------------------------------------
@@ -533,6 +535,7 @@ section {
 
 .why-us .content .more-btn i {
   font-size: 14px;
+  color: blue;
 }
 
 .why-us .content .more-btn:hover {
@@ -542,10 +545,9 @@ section {
 
 .why-us .icon-boxes .icon-box {
   text-align: center;
-  border-radius: 10px;
   background: #fff;
   box-shadow: 0px 2px 15px rgba(0, 0, 0, 0.1);
-  padding: 40px 30px;
+  padding: 20px 15px;
   width: 100%;
 }
 
@@ -557,12 +559,11 @@ section {
 
 .why-us .icon-boxes .icon-box h4 {
   font-size: 20px;
-  font-weight: 700;
-  margin: 0 0 30px 0;
+  font-weight: 400;
 }
 
 .why-us .icon-boxes .icon-box p {
-  font-size: 15px;
+  font-size: 14px;
   color: #716f6f;
 }
 
