--- a/src/app/modules/restrict/add-expense/add-expense.component.html
+++ b/src/app/modules/restrict/add-expense/add-expense.component.html
@@ -26,7 +26,6 @@
             </select>
           </div>
         </div>
-        
         <br>
 
         <!-- dates -->
@@ -37,11 +36,9 @@
             [(ngModel)]="expense.expenseDate" bsDatepicker [bsConfig]="bsConfig">
           </div>
        </div>
-
       </div>
 
-      <br>
-      <hr>
+      <br><hr>
 
       <!-- items -->
       <div class="container-fluid" *ngFor="let obj of dataArray; let i = index">
@@ -82,13 +79,11 @@
               [class.has-success]="val.valid">
               <label for="value" class="control-label">Valor:</label>
               <input required id="value" name="value{{i}}" type="text" class="form-control" 
-                [(ngModel)]="obj.value" #val="ngModel" >
+                [(ngModel)]="obj.itemValue" #val="ngModel" >
               <span class="help-block" *ngIf="val.invalid && val.touched">
                 O valor do item é obrigatório
               </span>
               <br>
-              <input name="valueTest{{i}}" type="text" class="form-control" 
-              [(ngModel)]="valueArray[i]" value="{{obj.value}}">
             </div>
           </div>
           <br>
@@ -116,14 +111,11 @@
             <div class="col-1">
               <span (click)="addItem()" class="btn btn-success" >+</span>
             </div>
-          </div>
-          <hr>
-
+          </div><hr>
         </div>
       <!--end of item-->
       <br>
       <br>
-
 
       <!--total value-->
       <div class="container-fluid">
@@ -131,12 +123,12 @@
           <div class="col-sm-4">
             <label for="value">Valor total: </label>
             <input id="value" type="text" class="form-control" readonly
-            [(ngModel)]="total">
+            value="{{total}}">
           </div>
         </div>
 
-
-
+        <br>
+        <button class="btn btn-primary" (click)="dataArraySum()">Calcular</button>
         <br>
         <button class="btn btn-primary" type="submit" [disabled]="itemForm.invalid"(click)="onSubmit()">Submeter</button>
       </div>
