--- a/src/app/modules/restrict/list-expenses/list-expenses.component.html
+++ b/src/app/modules/restrict/list-expenses/list-expenses.component.html
@@ -13,7 +13,7 @@
       </tr>
     </thead>
     <tbody>
-        <tr *ngFor="let item of this.expense">
+        <tr *ngFor="let item of expense">
           <td>{{ item.expenseName }}</td>
           <td>{{ item.espenseType }}</td>
           <td>{{ item.expenseDate }}</td>
