--- a/src/app/modules/restrict/add-expense/add-expense.component.html
+++ b/src/app/modules/restrict/add-expense/add-expense.component.html
@@ -60,7 +60,7 @@
       <!--value-->
       <div class="col-sm-6" [class.has-error]="val.invalid && val.touched" [class.has-success]="val.valid">
         <label for="value" class="control-label">Valor:</label>
-        <input required id="value" name="value{{i}}" type="text" class="form-control"  [(ngModel)]="dataArray[i].itemValue" #val="ngModel" >
+        <input required id="value" name="value{{i}}" type="number" class="form-control"  [(ngModel)]="obj.itemValue" #val="ngModel" >
         <span class="help-block" *ngIf="val.invalid && val.touched"> O valor do item é obrigatório </span>
         <br>
       </div>
@@ -100,14 +100,17 @@
   <div class="container-fluid">
     <div class="row">
       <div class="col-sm-4">
-        <label for="value">Valor total: </label>
-        <input id="value" type="text" class="form-control" readonly value="{{total}}">
+        <input id="value" type="text" class="form-control" readonly value="{{ total }}">
+      </div>
+      <div class="col-sm-4">
+        <button class="btn btn-primary" type="button" (click)="valueSum()">Total</button>
       </div>
     </div>
 
     <br>
-    <!--<button class="btn btn-primary" (click)="valueSum()">Calcular</button>-->
     <!--<br>-->
+    
+    <br><br>
     <button class="btn btn-primary" type="submit" [disabled]="itemForm.invalid"(click)="onSubmit()">Submeter</button>
   </div>
   <br>
