--- a/src/app/modules/restrict/personal-main/personal-main.component.html
+++ b/src/app/modules/restrict/personal-main/personal-main.component.html
@@ -113,7 +113,7 @@
         <form class="d-none d-sm-inline-block form-inline mr-auto ml-md-3 my-2 my-md-0 mw-100 navbar-search">
           <div class="input-group">
             <input type="text" class="form-control bg-light border-0 small" 
-            placeholder="Search for..." aria-label="Search" aria-describedby="basic-addon2">
+            placeholder="Procurar por..." aria-label="Search" aria-describedby="basic-addon2">
             <div class="input-group-append">
               <button class="btn btn-primary" type="button">
                 <i class="fas fa-search fa-sm"></i>
@@ -182,15 +182,7 @@
           <app-overall></app-overall>
 
         </div>
-
-      </div>
-
-
-
-
-
-
-      
+     
 
     </div>
 </div>
