--- a/src/app/modules/restrict/personal-main/personal-main.component.html
+++ b/src/app/modules/restrict/personal-main/personal-main.component.html
@@ -182,6 +182,11 @@
           <app-overall></app-overall>
 
         </div>
+
+        <div *ngIf="update">
+          <app-update-expense></app-update-expense>
+
+        </div>
      
 
     </div>
