--- a/src/app/modules/restrict/update-expense/update-expense.component.html
+++ b/src/app/modules/restrict/update-expense/update-expense.component.html
@@ -70,7 +70,7 @@
                <input id="value" type="text" class="form-control" readonly>
              </div>
             <div class="col-sm-4">
-               <button class="btn btn-primary" type="button" >Confirmar</button>
+               <button class="btn btn-primary" type="button" (click)="expenseUpdate()" >Confirmar</button>
             </div>
           </div>
         </div>
