--- a/src/app/modules/login/do-login/login.component.html
+++ b/src/app/modules/login/do-login/login.component.html
@@ -6,7 +6,7 @@
         <span class="login100-form-title p-b-51"> Login </span>
 
         <!--Username-->
-        <a routerLink="/main" class="txt1">voltar</a>
+        <a routerLink="/" class="txt1">voltar</a>
         <div class="wrap-input100 validate-input m-b-16">      
           <input type="text" [(ngModel)]="user.username" class="input100"
           id="username" name="username" placeholder="Username" required #username="ngModel">
