--- a/src/app/modules/restrict/add-expenses/short-expense/short-expense.component.html
+++ b/src/app/modules/restrict/add-expenses/short-expense/short-expense.component.html
@@ -1,1 +1,111 @@
-<p>short-expense works!</p>
+<!-- create new expense-->
+<div class="d-sm-flex align-items-center justify-content-between mb-4">
+    <h1 class="h3 mb-0 text-blue">Criar despesa não corrente de curta duração</h1>
+</div>
+    
+<!--form expenses-->
+<form #itemForm="ngForm" name="form">
+    <div class="container-fluid">
+        <div class="row">
+            <!-- expense name -->
+            <div class="col-sm-6">
+                <label>Nome da despesa:</label>
+                <input type="text" class="form-control">
+            </div>
+            <!-- expense type -->
+            <div class="col-sm-6">
+                <label>Tipo da despesa:</label>
+                <select class="form-control ml-1" >
+                    <option>Tipo</option>
+                </select>
+            </div>
+        </div>
+        <br>
+        <div class="row">
+            <!-- date  -->
+            <div class="col-sm-6">
+                <label>Data:</label>
+                <input type="text" class="form-control" >
+            </div>
+            <div class="col-sm-4">
+                <label>Prazo (dias):</label>
+                <input type="number" class="form-control" >
+            </div>
+        </div>
+        <br>
+        <div class="row">
+            <div class="col-sm-6">
+                <label>Data Limite:</label>
+                <input type="text" class="form-control" >
+            </div>
+        </div>
+        <br>
+        <div class="row">
+            <div class="custom-control custom-checkbox col-sm-6">
+                <input type="checkbox" class="custom-control-input" id="customCheck1">
+                <label class="custom-control-label" for="customCheck1">Já está pago?</label>
+            </div>
+        </div>
+        <br>
+        <div class="row">
+            <div class="col-sm-6">
+                <button class="btn btn-primary" (click)="addItems()" >Tem items a adicionar?</button>
+            </div>
+        </div>
+    </div>
+    <br>
+    <!-- items -->
+    <div *ngIf="hasItem">
+        <div class="container-fluid">
+            <h4 class="mb-2 text-blue2">Items da despesa</h4><br>
+            <h5 class="mb-2 text-gray-800">&nbsp;&nbsp;&nbsp;Item#</h5><br>
+            <div class="row">
+                <!--item name-->
+                <div class="col-sm-6">
+                    <label class="control-label">Nome do item:</label>
+                    <input type="text" class="form-control">
+                </div>
+                <!--item description-->
+                <div class="col-sm-6">
+                    <label for="description">Descrição:</label>
+                    <textarea type="text" rows="1" class="form-control" ></textarea>
+                </div>
+            </div>
+            <br>
+            <div class="row">
+                <!--currency-->
+                <div class="col-sm-6">
+                    <label for="currency">Moeda:</label>
+                    <select class="form-control ml-1" >
+                        <option> valor </option>
+                    </select>
+                </div>
+                <!--value-->
+                <div class="col-sm-6">
+                    <label>Valor:</label>
+                    <input class="form-control">
+                </div>
+            </div>
+            <br>
+        </div>
+    </div>
+    <!--end of item-->
+    <br>
+    <br>
+  
+    <!--total value-->
+    <div class="container-fluid">
+      <div class="row">
+        <div class="col-sm-4">
+          <input id="value" type="number" class="form-control" readonly>
+        </div>
+      </div>
+      <br>
+      <br><br>
+      <button class="btn btn-primary" type="submit">Submeter</button>
+    </div>
+    <br>
+    <br>
+  </form>
+    
+  
