--- a/src/app/modules/restrict/list-expenses/list-expenses.component.html
+++ b/src/app/modules/restrict/list-expenses/list-expenses.component.html
@@ -1,32 +1,150 @@
 <!-- List all expenses -->
+<br>
+<div class="container-fluid">
+  <div class="row">
+    <!-- expense type -->
+    <div class="col-sm-6">
+      <label>Tipo de procura:</label>
+      <select required name="searchType" class="form-control ml-1">
+        <option> Geral </option>
+        <option> Por Tipo </option>
+        <option> Por Ano </option>
+        <option> Por Estado </option>
+      </select>
+    </div>
+  </div>
+</div>
+<br>
 
 <div class="d-sm-flex align-items-center justify-content-between mb-4">
   <h1 class="h3 mb-0 text-blue">Listar todas as despesas</h1>
 </div>
-<table class="table table-hover">
-  <thead>
-    <tr>
-      <th scope="col" style="display:none;">ID</th>
-      <th scope="col">Despesa</th>
-      <th scope="col">Tipo de Despesa</th>
-      <th scope="col">Data da Despesa</th>
-      <th scope="col">Data do Pagamento</th>
-      <th scope="col">Valor Total</th>
-      <th scope="col">Acções</th>
-    </tr>
-  </thead>
-  <tbody>
+
+<!--overall search-->
+<div *ngIf="overall">
+  <table class="table table-hover">
+    <thead>
+      <tr>
+        <th scope="col" style="display:none;">ID</th>
+        <th scope="col">Despesa</th>
+        <th scope="col">Tipo</th>
+        <th scope="col">Subtipo</th>
+        <th scope="col">Data</th>
+        <th scope="col">Total</th>
+        <th scope="col">Acções</th>
+      </tr>
+    </thead>
+    <tbody>
       <tr *ngFor="let item of expense">
         <td style="display:none;">{{ item.id }}</td>
         <td>{{ item.expenseName }}</td>
-        <td>{{ item.espenseType }}</td>
+        <td>{{ item.expenseType }}</td>
+        <td>{{ item.expenseSubtype }}</td>
         <td>{{ item.expenseDate }}</td>
-        <td>{{ item.paymentDate }}</td>
-        <td>{{ item.total }}</td>
+        <td>{{ item.value }}</td>
         <td>
-            <button class="btn btn-primary" type="button" (click)="onEdit(item)"><i class="far fa-edit"></i></button> &nbsp;
-            <button class="btn btn-primary" type="button" ><i class="fas fa-trash"></i></button>
+          <button class="btn btn-primary" type="button" (click)="onEdit(item)"><i class="far fa-edit"></i></button>
+          &nbsp;
+          <button class="btn btn-primary" type="button"><i class="fas fa-trash"></i></button>
         </td>
       </tr>
-  </tbody>
-</table>
+    </tbody>
+  </table>
+</div>
+
+<!--search by type-->
+<div *ngIf="types">
+  <p>Tipo de despesa: xxx</p>
+  <table class="table table-hover">
+    <thead>
+      <tr>
+        <th scope="col" style="display:none;">ID</th>
+        <th scope="col">Despesa</th>
+        <th scope="col">Subtipo</th>
+        <th scope="col">Data</th>
+        <th scope="col">Total</th>
+        <th scope="col">Acções</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr *ngFor="let item of expense">
+        <td style="display:none;">{{ item.id }}</td>
+        <td>{{ item.expenseName }}</td>
+        <td>{{ item.expenseSubtype }}</td>
+        <td>{{ item.expenseDate }}</td>
+        <td>{{ item.value }}</td>
+        <td>
+          <button class="btn btn-primary" type="button" (click)="onEdit(item)"><i class="far fa-edit"></i></button>
+          &nbsp;
+          <button class="btn btn-primary" type="button"><i class="fas fa-trash"></i></button>
+        </td>
+      </tr>
+    </tbody>
+  </table>
+</div>
+
+<!--search by year-->
+<div *ngIf="years">
+  <p>Ano: xxx</p>
+  <table class="table table-hover">
+    <thead>
+      <tr>
+        <th scope="col" style="display:none;">ID</th>
+        <th scope="col">Despesa</th>
+        <th scope="col">Tipo</th>
+        <th scope="col">Subtipo</th>
+        <th scope="col">Data</th>
+        <th scope="col">Total</th>
+        <th scope="col">Acções</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr *ngFor="let item of expense">
+        <td style="display:none;">{{ item.id }}</td>
+        <td>{{ item.expenseName }}</td>
+        <td>{{ item.expenseType }}</td>
+        <td>{{ item.expenseSubtype }}</td>
+        <td>{{ item.expenseDate }}</td>
+        <td>{{ item.value }}</td>
+        <td>
+          <button class="btn btn-primary" type="button" (click)="onEdit(item)"><i class="far fa-edit"></i></button>
+          &nbsp;
+          <button class="btn btn-primary" type="button"><i class="fas fa-trash"></i></button>
+        </td>
+      </tr>
+    </tbody>
+  </table>
+</div>
+
+<!-- search by state -->
+<div *ngIf="states">
+  <p>Estado: xxx</p>
+  <table class="table table-hover">
+    <thead>
+      <tr>
+        <th scope="col" style="display:none;">ID</th>
+        <th scope="col">Despesa</th>
+        <th scope="col">Tipo</th>
+        <th scope="col">Subtipo</th>
+        <th scope="col">Data</th>
+        <th scope="col">Total</th>
+        <th scope="col">Acções</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr *ngFor="let item of expense">
+        <td style="display:none;">{{ item.id }}</td>
+        <td>{{ item.expenseName }}</td>
+        <td>{{ item.expenseType }}</td>
+        <td>{{ item.expenseSubtype }}</td>
+        <td>{{ item.expenseDate }}</td>
+        <td>{{ item.value }}</td>
+        <td>
+          <button class="btn btn-primary" type="button" (click)="onEdit(item)"><i class="far fa-edit"></i></button>
+          &nbsp;
+          <button class="btn btn-primary" type="button"><i class="fas fa-trash"></i></button>
+        </td>
+      </tr>
+    </tbody>
+  </table>
+</div>
